--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
-<!doctype html>
+<!DOCTYPE html>
 <head>
 	<title>WKSolutions | Web Development</title>
-	<meta charset="utf-8" />
-	<link rel="stylesheet" href="css/style.css" /> 
-	<meta name="viewport" content="width-divice-width, initial-scale=1.0"/>
-	
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css"> 
+	<link rel="stylesheet" href="css/responsive.css">
+	<meta name="viewport" content="width-divice-width, initial-scale=1.0">
 </head>
 <body>
-
+	<header>
+		<div id="headerlogo">
+		</div>
+		<nav>
+			<ul>
+				<li>Home</li>
+				<li>Projects</li>
+				<li>Team</li>
+				<li>Contact</li>
+			</ul>	
+		</nav>
+	</header>
+	<!--             START HERO/SLIDER           -->
+	<div id="hero">
+	</div>
+	<!--             END HERO/SLIDER           -->
+	<div id="websiteContent">
+		<h2>WE ARE <span>WK SOLUTIONS</span> - WEB DEVELOPERS WITH A PASSION</h2>
+		<div class="divider"></div>
+		<!--             START SERVICE ICONS           -->
+		<div id="services">
+			<ul>
+				<li>
+					<div class="bg-disc">
+						<div class="icon"></div>
+					</div>
+					<h3>Responsive</h3>
+					<h5>Designs</h5>
+				</li>
+				<li>
+					<div class="bg-disc">
+						<div class="icon"></div>
+					</div>
+					<h3>Web</h3>
+					<h5>Development</h5>
+				</li>
+				<li>
+					<div class="bg-disc">
+						<div class="icon"></div>
+					</div>
+					<h3>Optimized</h3>
+					<h5>Websites</h5>
+				</li>
+				<li>
+					<div class="bg-disc">
+						<div class="icon"></div>
+					</div>
+					<h3>Great</h3>
+					<h5>Support</h5>
+				</li>
+			</ul>
+		</div>
+		<!--             END SERVICE ICONS          -->
+		<div class="divider"></div>
+		<!--             START PROJECTS          -->
+		<div id="projects">
+			<h2>HERE ARE SOME OF OUR <span>RECENT PROJECTS</span></h2>
+			<div class="projectBox">1</div>
+			<div class="projectBox">2</div>
+			<div class="projectBox">3</div>
+			<div class="projectBox">4</div>
+		</div>
+		<!--             END PROJECTS         -->
+		<div class="divider"></div>
+		<!--             START TEAM          -->
+			<h2>MEET THE <span>TEAM</span></h2>
+			<ul>
+				<li>
+					<div class="portrait"></div>
+					<h3>Kyle</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				</li>
+				<li>
+					<div class="portrait"></div>
+					<h3>William</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				</li>
+			</ul>
+			<!--             END TEAM TEAM          -->
+			<div class="divider"></div>
+			<!--             START CONTACT         -->
+			<h2>GET IN <span>TOUCH</span></h2>
+			<div id="e-mail">
+			</div>
+	</div>
 </body>	
 </html> 
