added css to header and body

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
 	<header>
 		<div id="headerlogo">
+			<h1>WK SOLUTIONS</h1>
 		</div>
 		<nav>
 			<ul>
-				<li>Home</li>
-				<li>Projects</li>
-				<li>Team</li>
-				<li>Contact</li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Projects</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>	
 		</nav>
 	</header>
